Temporary account map added

--- a/Server/build_server/makefile
+++ b/Server/build_server/makefile
@@ -27,8 +27,8 @@ Connection.o: Connection.cpp Server.hpp
 server_main.o: server_main.cpp Server.hpp
 	$(CC) $(STANDART) $(COMPILER_FLGS) -c $< $(INCL)
 
-#Stanza.o: Stanza.cpp Stanza.hpp JID.hpp
-#	$(CC) $(STANDART) $(COMPILER_FLGS) -c $< $(INCL)
+Stanza.o: Stanza.cpp Stanza.hpp JID.hpp
+	$(CC) $(STANDART) $(COMPILER_FLGS) -c $< $(INCL)
 
 clean:
 	rm -f *.o
