--- a/Server/build_server/makefile
+++ b/Server/build_server/makefile
@@ -1,7 +1,7 @@
 CC = g++
 STANDART = --std=c++11
 COMPILER_FLGS = -Werror 
-LINKER_FLGS = -lboost_system
+LINKER_FLGS = -lboost_system -lssl -lcrypto -lsqlite3
 
 ROOT_DIR = ../../
 
@@ -15,7 +15,7 @@ INCL = -I $(ROOT_DIR)/DataClasses/ -I $(ROOT_DIR)/Server/
 
 all: server
 
-server: server_main.o Server.o Connection.o Stanza.o
+server: server_main.o Server.o Connection.o Stanza.o Database.o error_codes.o
 	$(CC) $(STANDART) -o $@ $^ $(LINKER_FLGS)
 
 Server.o: Server.cpp Server.hpp
@@ -28,6 +28,12 @@ server_main.o: server_main.cpp Server.hpp
 	$(CC) $(STANDART) $(COMPILER_FLGS) -c $< $(INCL)
 
 Stanza.o: Stanza.cpp Stanza.hpp JID.hpp
+	$(CC) $(STANDART) $(COMPILER_FLGS) -c $< $(INCL)
+
+Database.o: Database.cpp Database.hpp
+	$(CC) $(STANDART) $(COMPILER_FLGS) -c $< $(INCL)
+
+error_codes.o: error_codes.cpp error_codes.hpp
 	$(CC) $(STANDART) $(COMPILER_FLGS) -c $< $(INCL)
 
 clean:
